syntax = "proto3";

package dependentgrpc;

service SayHelloService{
        rpc sayHello (SayHelloReq) returns (SayHelloResp) {}
}

message SayHelloReq {
        string req = 1;
}

message SayHelloResp {
        string resp = 1;
}
